...
                    BottomNavigationBarItem(
                      icon: const Icon(Icons.home_outlined, key: Key('home_tab')),
                      activeIcon: const Icon(Icons.home),
                      label: context.l10n.home,
                    ),
                    BottomNavigationBarItem(
                      icon: const Icon(Icons.grid_view_outlined, key: Key('catalog_tab')),
                      activeIcon: const Icon(Icons.grid_view),
                      label: context.l10n.catalog,
                    ),
                    BottomNavigationBarItem(
                      icon: const Icon(Icons.favorite_outline, key: Key('wishlist_tab')),
                      activeIcon: const Icon(Icons.favorite),
...
                    ),
                    BottomNavigationBarItem(
                      icon: Badge(
                        isLabelVisible: cartCount > 0,
                        label: Text(cartCount.toString()),
                        backgroundColor: context.colors.primary,
                        child: const Icon(Icons.shopping_cart_outlined, key: Key('cart_tab')),
                      ),
                      activeIcon: Badge(
                        isLabelVisible: cartCount > 0,
                        label: Text(cartCount.toString()),
                        backgroundColor: context.colors.primary,
                        child: const Icon(Icons.shopping_cart),
...
