...
  String get ratingVeryBad => 'Juda yomon';

  @override
  String get ratingBad => 'Yomon';

  @override
  String get ratingAverage => 'O\'rtacha';

  @override
  String get ratingGood => 'Yaxshi';

  @override
  String get ratingExcellent => 'A\'lo';
...

  @override
  String get onboardingSubtitle =>
      'Sement, g\'isht va po\'latni ishonchli yetkazib beruvchilardan ulgurji narxlarda xarid qiling.';

  @override
  String get getStarted => 'Boshlash';

  @override
  String get errorOccurred => 'Xatolik yuz berdi';

  @override
  String get categoriesNotFound => 'Kategoriyalar topilmadi';
...
